--- a/WebVella.Erp.Site.Sdk/Config.json
+++ b/WebVella.Erp.Site.Sdk/Config.json
@@ -10,7 +10,7 @@
 		"EnableFileSystemStorage": "false",
 		"FileSystemStorageFolder": "\\\\192.168.0.2\\Share\\erp3-files",
 		"EnableCloudBlobStorage": "false",
-		"CloudBlobStorageConnectionString": "disk://path=c:\\temp\\WebVella_files", // see https://github.com/aloneguid/storage/blob/develop/doc/blobs.md
+		"CloudBlobStorageConnectionString": "disk://path=c:\\temp\\WebVella_files",
 		"EmailEnabled": false,
 		"EmailSMTPServerName": "",
 		"EmailSMTPPort": "25",
