--- a/WebVella.Erp.Site/Config.json
+++ b/WebVella.Erp.Site/Config.json
@@ -5,7 +5,7 @@
 		"Lang": "en",
 		"Locale": "en-US",
 		"TimeZoneName": "FLE Standard Time",
-		"CacheKey": "", //if empty current date will be used 
+		"CacheKey": "",
 		"DevelopmentMode": "true",
 		"EnableBackgroundJobs": "false",
 		"EnableFileSystemStorage": "false",
